--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Пьяная рулетка</h1>
-    <p>Лот: Бутылка виски</p>
-    <div class="roulette">
-        <div class="arrow" id="arrow"></div>
+    <div class="container">
+        <h1>Пьяная рулетка</h1>
+        <div id="roulette-wheel"></div> <!-- Круг рулетки -->
+        <div id="number-selection">
+            <h2>Выбери свой номер:</h2>
+            <div id="numbers-grid"></div>
+        </div>
+        <button id="start-roulette" disabled>Запустить рулетку</button>
     </div>
-    <div class="numbers" id="numbers"></div>
-
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
