--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
         <div id="number-selection">
             <h2>Выбери свой номер:</h2>
             <div id="numbers-grid"></div>
+            <p id="selected-counter">Выбрано: <span id="counter">0</span>/12</p>
         </div>
         <button id="start-roulette" disabled>Запустить рулетку</button>
     </div>
+    <audio id="spin-sound" src="spin.mp3" preload="auto"></audio>
+    <audio id="select-sound" src="select.mp3" preload="auto"></audio>
     <script src="script.js"></script>
 </body>
 </html>
