--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <div id="number-selection">
             <h2>Выбери свой номер:</h2>
             <div id="numbers-grid"></div>
-            <p id="selected-counter">Выбрано: <span id="counter">0</span>/12</p>
+            <p id="selected-counter">Выбрано: <span id="counter">0</span>/3</p>
         </div>
         <button id="start-roulette" disabled>Запустить рулетку</button>
+        <p id="winner-message" style="color: #ffcc00; font-size: 18px;"></p>
     </div>
     <audio id="spin-sound" src="spin.mp3" preload="auto"></audio>
     <audio id="select-sound" src="select.mp3" preload="auto"></audio>
